@@ -1,6 +1,6 @@
 # Test linking directly to S-records.
 # By Ian Lance Taylor, Cygnus Support.
-#   Copyright 1999, 2000, 2001, 2002, 2003, 2005, 2006, 2007, 2009, 2011
+#   Copyright 1999, 2000, 2001, 2002, 2003, 2005, 2006, 2007, 2009, 2011, 2012
 #   Free Software Foundation, Inc.
 #
 # This file is part of the GNU Binutils.
@@ -264,10 +264,6 @@ proc run_srec_test { test objs } {
     # Xtensa ELF targets relax by default; S-Record linker does not
     if [istarget xtensa*-*-*] {
 	set flags "$flags -no-relax"
-    }
-
-    if [istarget powerpc64*-*-*] {
-	set flags "$flags --no-toc-optimize"
     }
 
     # Epiphany needs some help too
