@@ -1,3 +1,12 @@
+2012-05-26  Alan Modra  <amodra@gmail.com>
+
+	* ldlex.h (enum option_values): Move from..
+	* lexsup.c: ..here.
+	* emultempl/ppc32elf.em: Include ldlex.h.
+	(PARSE_AND_LIST_ARGS_CASES): Disable optimisations when
+	--traditional-format.
+	* emultempl/ppc64elf.em: Likewise.
+
 2012-05-25  Alan Modra  <amodra@gmail.com>
 
 	PR ld/13909
